--- a/task4/task4.css
+++ b/task4/task4.css
@@ -25,11 +25,61 @@ header{
     margin-left: -1.2rem;
     font-size: 1.2rem;
 }
-main{
+.phone{
+    width: 100%;
+    height: 3rem;
+    background-color: white;
+    margin: 0.5rem 0 0.5rem 0;
+}
+.password{
+    width: 100%;
+    height: 3rem;
+    background-color: white;
+    margin: 0.5rem 0 0.5rem 0;
+}
+.inputbutton{
+    background-color: rgb(95,192,205);
+    margin: 0;
+    height: 3rem;
+    width: 100%;
+    border-width: 0;
+    color: white;
+    line-height: 3rem;
+    font-size: 1rem;
 
 }
-main p{
+.icon{
+    position: absolute;
+    width: auto;
+    height: 1rem;
+    margin: 1rem 1rem;
+}
+
+.password input{
+    border: none;
+    font-size: 0.3rem;
+    outline: none;
+    padding-left: 3rem;
+    line-height: 3rem;
+}
+.phone input{
+    border:none;
+    font-size: 0.3rem;
+    outline: none;
+    padding-left: 3rem;
+    line-height: 3rem;
+}
+.bar{
+    position: absolute;
+    color: lightgray;
+    font-size: 1.3rem;
+    line-height: 3rem;
+    padding-left: 2.5rem;
+}
+
+.forget{
     position: absolute;
     color: rgb(95,192,205);
     right: 1rem;
+    font-size: 0.6rem;
 }
