--- a/task4/task4.css
+++ b/task4/task4.css
@@ -51,22 +51,22 @@ header{
 .icon{
     position: absolute;
     width: auto;
-    height: 1rem;
-    margin: 1rem 1rem;
+    height: 1.2rem;
+    margin: 0.9rem 0 0.9rem 1rem;
 }
 
 .password input{
     border: none;
     font-size: 0.3rem;
     outline: none;
-    padding-left: 3rem;
+    padding-left: 3.2rem;
     line-height: 3rem;
 }
 .phone input{
     border:none;
     font-size: 0.3rem;
     outline: none;
-    padding-left: 3rem;
+    padding-left: 3.2rem;
     line-height: 3rem;
 }
 .bar{
